// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot Tests > Wave 1 snapshot 1`] = `
[
  {
    "armor": undefined,
    "count": 6,
    "enemyType": "water_spirit",
    "hpMultiplier": 1,
    "regen": undefined,
    "spawnIntervalMs": 800,
    "split": undefined,
  },
]
`;

exports[`Snapshot Tests > Wave 5 snapshot 1`] = `
[
  {
    "armor": undefined,
    "count": 8,
    "enemyType": "salamander",
    "hpMultiplier": 1.4,
    "regen": undefined,
    "spawnIntervalMs": 600,
    "split": undefined,
  },
  {
    "armor": undefined,
    "count": 1,
    "enemyType": "boss_dragon",
    "hpMultiplier": 2.1,
    "regen": undefined,
    "spawnIntervalMs": 0,
    "split": undefined,
  },
]
`;

exports[`Snapshot Tests > Wave 10 snapshot 1`] = `
[
  {
    "armor": undefined,
    "count": 8,
    "enemyType": "beetle",
    "hpMultiplier": 2,
    "regen": undefined,
    "spawnIntervalMs": 600,
    "split": undefined,
  },
  {
    "armor": true,
    "count": 1,
    "enemyType": "boss_dragon",
    "hpMultiplier": 4,
    "regen": undefined,
    "spawnIntervalMs": 0,
    "split": undefined,
  },
]
`;

exports[`Snapshot Tests > Wave 15 snapshot 1`] = `
[
  {
    "armor": undefined,
    "count": 10,
    "enemyType": "salamander",
    "hpMultiplier": 3.6,
    "regen": undefined,
    "spawnIntervalMs": 500,
    "split": undefined,
  },
  {
    "armor": undefined,
    "count": 1,
    "enemyType": "boss_dragon",
    "hpMultiplier": 7.2,
    "regen": true,
    "spawnIntervalMs": 0,
    "split": undefined,
  },
]
`;

exports[`Snapshot Tests > Wave 20 snapshot 1`] = `
[
  {
    "armor": undefined,
    "count": 1,
    "enemyType": "boss_dragon",
    "hpMultiplier": 20,
    "regen": undefined,
    "spawnIntervalMs": 0,
    "split": true,
  },
]
`;
